Add biometric authentication support and enhance task/event management
- Added `biometricEnabled` property to User model for biometric login option.
- Introduced `createdByTutor` property in Task, CalendarEvent, and VideoItem models to manage tutor-created items.
- Updated UI components to reflect new properties and manage deletion permissions based on user roles.
- Enabled internet permission in AndroidManifest for loading external content.
- Improved error handling and user experience in video playback and task management.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ composecalendar = "1.4.0"
 kotlinxDatetime = "1.4.0"
 material3 = "1.4.0"
 foundationVersion = "1.10.1"
+biometricKtx = "1.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -44,6 +45,7 @@ composecalendar = { group = "io.github.boguszpawlowski.composecalendar", name = 
 kotlinx-datetime = { group = "io.github.boguszpawlowski.composecalendar", name = "kotlinx-datetime", version.ref = "kotlinxDatetime" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundationVersion" }
+androidx-biometric-ktx = { group = "androidx.biometric", name = "biometric-ktx", version.ref = "biometricKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
