--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,17 @@
             </intent-filter>
         </activity>
 
+        <!-- Provider para compartir informes generados -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <!-- Receiver para notificaciones programadas desde CalendarioPantalla -->
         <receiver android:name=".pantallas.AlarmReceiver" android:exported="true" />
 
